start-microfrontends/k8s/dev/tramites-microfront/tramites-microfront-service-dev.yaml
# Expose the deployment using a Service
apiVersion: v1
kind: Service
metadata:
  name: modulefederation-tramites-microfront-service-dev
spec:
  selector:
    app: modulefederation-tramites-microfront-dev
  ports:
    - protocol: TCP
      port: 4233
      targetPort: 80
  type: NodePort
