start-microfrontends/k8s/dev/tramites-microfront/tramites-microfront-ingress-dev.yaml
# Create Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: modulefederation-tramites-microfront-ingress-dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: front.v30.ultrasist.net
    http:
      paths:
      - path: /tramites(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: modulefederation-tramites-microfront-service-dev
            port:
              number: 4233
  tls:
  - hosts:
    - front.v30.ultrasist.net
    secretName: v30certs
